--- a/excercise-checklist.html
+++ b/excercise-checklist.html
@@ -30,7 +30,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="price-prediction-the-application-of-statistical-methods.html"/>
+<link rel="prev" href="price-prediction-application-of-statistical-methods.html"/>
 <link rel="next" href="whats-next-in-your-data-science-career.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -97,20 +97,24 @@
 <li class="chapter" data-level="4.1.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#days-lineplot"><i class="fa fa-check"></i><b>4.1.2</b> 365 Days Lineplot</a></li>
 </ul></li>
 <li class="chapter" data-level="4.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualize-individual-airbnb-offers-with-the-listings-dataset"><i class="fa fa-check"></i><b>4.2</b> Visualize individual Airbnb offers with the listings dataset</a></li>
-<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merging-of-listings-and-review-data-set"><i class="fa fa-check"></i><b>4.3</b> Merging of listings and review data set</a><ul>
-<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#your-first-barplot"><i class="fa fa-check"></i><b>4.3.1</b> Your first Barplot</a></li>
+<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merging-of-listings-and-reviewing-the-data-set"><i class="fa fa-check"></i><b>4.3</b> Merging of Listings and Reviewing the Data Set</a><ul>
+<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#your-first-barplot"><i class="fa fa-check"></i><b>4.3.1</b> Your First Barplot</a></li>
 </ul></li>
 <li class="chapter" data-level="4.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualization-with-maps"><i class="fa fa-check"></i><b>4.4</b> Visualization with Maps</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Price Prediction- The application of statistical methods</a><ul>
-<li class="chapter" data-level="5.1" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-test"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (test)</a></li>
-<li class="chapter" data-level="5.2" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
-<li class="chapter" data-level="5.3" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#from-training-to-testing---making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing - Making Predictions</a></li>
-<li class="chapter" data-level="5.4" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
+<li class="chapter" data-level="5" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Price Prediction – Application of Statistical Methods</a><ul>
+<li class="chapter" data-level="5.1" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-train"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (train)</a></li>
+<li class="chapter" data-level="5.2" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
+<li class="chapter" data-level="5.3" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#from-training-to-testing-making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing – Making Predictions</a></li>
+<li class="chapter" data-level="5.4" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="excercise-checklist.html"><a href="excercise-checklist.html"><i class="fa fa-check"></i><b>6</b> Excercise Checklist</a></li>
 <li class="chapter" data-level="7" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html"><i class="fa fa-check"></i><b>7</b> What’s Next in Your Data Science Career?</a><ul>
-<li class="chapter" data-level="7.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#data-science-in-general"><i class="fa fa-check"></i><b>7.1</b> Data Science in General</a></li>
+<li class="chapter" data-level="7.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#data-science-in-general"><i class="fa fa-check"></i><b>7.1</b> Data Science in General</a><ul>
+<li class="chapter" data-level="7.1.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#version-control-with-git"><i class="fa fa-check"></i><b>7.1.1</b> Version Control with <span>Git</span></a></li>
+<li class="chapter" data-level="7.1.2" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#advice-for-non-traditional-data-scientists"><i class="fa fa-check"></i><b>7.1.2</b> Advice for <span>Non-Traditional Data Scientists</span></a></li>
+<li class="chapter" data-level="7.1.3" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#learn-from-great-data-scientists-on-kaggle"><i class="fa fa-check"></i><b>7.1.3</b> Learn from Great Data Scientists on <span>Kaggle</span></a></li>
+</ul></li>
 <li class="chapter" data-level="7.2" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#r"><i class="fa fa-check"></i><b>7.2</b> R</a></li>
 <li class="chapter" data-level="7.3" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#python"><i class="fa fa-check"></i><b>7.3</b> Python</a></li>
 </ul></li>
@@ -143,41 +147,45 @@
 <ol style="list-style-type: lower-alpha">
 <li><p>Transform t/f to boolean values True/False</p></li>
 <li><p>Aggregate data after dates</p></li>
-<li><p>plot available apartments over time</p></li>
+<li><p>Plot available apartments over time</p></li>
 </ol></li>
 <li><p>Visualize the listings dataset</p>
 <ol style="list-style-type: lower-alpha">
-<li><p>clean and transform the <code>price</code> and <code>cleaning_fee</code> columns to numeric values</p></li>
+<li><p>Clean and transform the <code>price</code> and <code>cleaning_fee</code> columns to numeric values</p></li>
 <li><p>Compute mean and standard deviation of apartment prices for each neighborhood</p></li>
-<li><p>visualize the price distribution for the most and least expensive district</p></li>
-<li><p>visualize if <code>cleaning_fee</code> was used to hide costs</p></li>
+<li><p>Visualize the price distribution for the most and least expensive district</p></li>
+<li><p>Visualize if <code>cleaning_fee</code> was used to hide costs</p></li>
 </ol></li>
 <li><p>Merging of <code>listings</code> and <code>review</code> data set</p>
 <ol style="list-style-type: lower-alpha">
-<li><p>aggregate reviews by <code>ID</code></p></li>
-<li><p>merge <code>listings</code> and aggregated reviews data</p></li>
-<li><p>filter and plot amount of apartments in each district</p></li>
+<li><p>Aggregate reviews by <code>ID</code></p></li>
+<li><p>Merge <code>listings</code> and aggregated reviews data</p></li>
+<li><p>Filter and plot amount of apartments in each district</p></li>
 </ol></li>
 <li><p>Visualize apartments on map</p>
 <ol style="list-style-type: lower-alpha">
 <li><p>Draw a circle for every available apartment on map</p></li>
-<li><p>colorize each circle according to its districts</p></li>
-<li><p>draw a 2D-density plot</p></li>
+<li><p>Colorize each circle according to its districts</p></li>
+<li><p>Draw a 2D-density plot</p></li>
 </ol></li>
 </ol>
-<p>** Part B: price prediction using statistical methods (advanced and motivated beginners)</p>
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
+<strong>Part B: price prediction using statistical methods (advanced and motivated beginners)</strong>
+=======
+** Part B: Price Prediction Using Statistical Methods (Advanced + Motivated Beginners)
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; a67f418d45a6224bb1aa661adba74749082bef5a</p>
 <ol style="list-style-type: decimal">
-<li><p>Visualize feature correlations in heatmap</p></li>
+<li><p>Visualize feature correlations in a correlation matrix/heatmap</p></li>
 <li><p>Regression</p>
 <ol style="list-style-type: lower-alpha">
-<li><p>simple regression model using one variable</p></li>
-<li><p>improve your model using more features</p></li>
+<li><p>Simple regression model using one variable</p></li>
+<li><p>Improve your model using more features</p></li>
 </ol></li>
 <li><p>Test your model</p>
 <ol style="list-style-type: lower-alpha">
-<li><p>use test data set to predict prices of the apartments</p></li>
-<li><p>compare your predictions with the true values</p></li>
-<li><p>train a new model using a more advanced method, send us your model and the predictions of your best model</p></li>
+<li><p>Use test data set to predict prices of the apartments</p></li>
+<li><p>Compare your predictions with the true values</p></li>
+<li><p>Train a new model using a more advanced method, send us your model and the predictions of your best model</p></li>
 </ol></li>
 </ol>
 
@@ -188,7 +196,7 @@
           </div>
         </div>
       </div>
-<a href="price-prediction-the-application-of-statistical-methods.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="price-prediction-application-of-statistical-methods.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="whats-next-in-your-data-science-career.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
