--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 <li class="chapter" data-level="6" data-path="excercise-checklist.html"><a href="excercise-checklist.html"><i class="fa fa-check"></i><b>6</b> Excercise Checklist</a></li>
 <li class="chapter" data-level="7" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html"><i class="fa fa-check"></i><b>7</b> What’s Next in Your Data Science Career?</a><ul>
 <li class="chapter" data-level="7.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#data-science-in-general"><i class="fa fa-check"></i><b>7.1</b> Data Science in General</a><ul>
-<li><a href="whats-next-in-your-data-science-career.html#version-control-with-git">Version Control with <span>Git</span></a></li>
-<li><a href="whats-next-in-your-data-science-career.html#advice-for-non-traditional-data-scientists">Advice for <span>Non-Traditional Data Scientists</span></a></li>
-<li><a href="whats-next-in-your-data-science-career.html#learn-from-great-data-scientists-on-kaggle">Learn from Great Data Scientists on <span>Kaggle</span></a></li>
+<li class="chapter" data-level="7.1.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#version-control-with-git"><i class="fa fa-check"></i><b>7.1.1</b> Version Control with <span>Git</span></a></li>
+<li class="chapter" data-level="7.1.2" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#advice-for-non-traditional-data-scientists"><i class="fa fa-check"></i><b>7.1.2</b> Advice for <span>Non-Traditional Data Scientists</span></a></li>
+<li class="chapter" data-level="7.1.3" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#learn-from-great-data-scientists-on-kaggle"><i class="fa fa-check"></i><b>7.1.3</b> Learn from Great Data Scientists on <span>Kaggle</span></a></li>
 </ul></li>
 <li class="chapter" data-level="7.2" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#r"><i class="fa fa-check"></i><b>7.2</b> R</a></li>
 <li class="chapter" data-level="7.3" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#python"><i class="fa fa-check"></i><b>7.3</b> Python</a></li>
@@ -207,6 +207,20 @@ gitbook.start({
 });
 </script>
 
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+  (function () {
+    var script = document.createElement("script");
+    script.type = "text/javascript";
+    var src = "true";
+    if (src === "" || src === "true") src = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML";
+    if (location.protocol !== "file:")
+      if (/^https?:/.test(src))
+        src = src.replace(/^https?:/, '');
+    script.src = src;
+    document.getElementsByTagName("head")[0].appendChild(script);
+  })();
+</script>
 </body>
 
 </html>
