--- a/whats-next-in-your-data-science-career.html
+++ b/whats-next-in-your-data-science-career.html
@@ -97,20 +97,24 @@
 <li class="chapter" data-level="4.1.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#days-lineplot"><i class="fa fa-check"></i><b>4.1.2</b> 365 Days Lineplot</a></li>
 </ul></li>
 <li class="chapter" data-level="4.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualize-individual-airbnb-offers-with-the-listings-dataset"><i class="fa fa-check"></i><b>4.2</b> Visualize individual Airbnb offers with the listings dataset</a></li>
-<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merging-of-listings-and-review-data-set"><i class="fa fa-check"></i><b>4.3</b> Merging of listings and review data set</a><ul>
-<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#your-first-barplot"><i class="fa fa-check"></i><b>4.3.1</b> Your first Barplot</a></li>
+<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merging-of-listings-and-reviewing-the-data-set"><i class="fa fa-check"></i><b>4.3</b> Merging of Listings and Reviewing the Data Set</a><ul>
+<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#your-first-barplot"><i class="fa fa-check"></i><b>4.3.1</b> Your First Barplot</a></li>
 </ul></li>
 <li class="chapter" data-level="4.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualization-with-maps"><i class="fa fa-check"></i><b>4.4</b> Visualization with Maps</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Price Prediction- The application of statistical methods</a><ul>
-<li class="chapter" data-level="5.1" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-test"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (test)</a></li>
-<li class="chapter" data-level="5.2" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
-<li class="chapter" data-level="5.3" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#from-training-to-testing---making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing - Making Predictions</a></li>
-<li class="chapter" data-level="5.4" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
+<li class="chapter" data-level="5" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Price Prediction – Application of Statistical Methods</a><ul>
+<li class="chapter" data-level="5.1" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-train"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (train)</a></li>
+<li class="chapter" data-level="5.2" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
+<li class="chapter" data-level="5.3" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#from-training-to-testing-making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing – Making Predictions</a></li>
+<li class="chapter" data-level="5.4" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="excercise-checklist.html"><a href="excercise-checklist.html"><i class="fa fa-check"></i><b>6</b> Excercise Checklist</a></li>
 <li class="chapter" data-level="7" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html"><i class="fa fa-check"></i><b>7</b> What’s Next in Your Data Science Career?</a><ul>
-<li class="chapter" data-level="7.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#data-science-in-general"><i class="fa fa-check"></i><b>7.1</b> Data Science in General</a></li>
+<li class="chapter" data-level="7.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#data-science-in-general"><i class="fa fa-check"></i><b>7.1</b> Data Science in General</a><ul>
+<li class="chapter" data-level="7.1.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#version-control-with-git"><i class="fa fa-check"></i><b>7.1.1</b> Version Control with <span>Git</span></a></li>
+<li class="chapter" data-level="7.1.2" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#advice-for-non-traditional-data-scientists"><i class="fa fa-check"></i><b>7.1.2</b> Advice for <span>Non-Traditional Data Scientists</span></a></li>
+<li class="chapter" data-level="7.1.3" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#learn-from-great-data-scientists-on-kaggle"><i class="fa fa-check"></i><b>7.1.3</b> Learn from Great Data Scientists on <span>Kaggle</span></a></li>
+</ul></li>
 <li class="chapter" data-level="7.2" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#r"><i class="fa fa-check"></i><b>7.2</b> R</a></li>
 <li class="chapter" data-level="7.3" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#python"><i class="fa fa-check"></i><b>7.3</b> Python</a></li>
 </ul></li>
@@ -139,16 +143,16 @@
 <p>At the end of your TechAcademy semester, you’ve successfully coded your way through a whole Data Science project. You liked what you did and would like bring your skills to the next level? Then this section provides you with many useful resources to deepen your knowledge in Data Science in general or Python and R in particular. The first section is useful for every aspiring Data Scientist, while the two following boxes introduce you to some language-specific resources. If you’ve come across some other useful materials that we didn’t mention here, feel free to contact us – this list is far from complete!</p>
 <div id="data-science-in-general" class="section level2">
 <h2><span class="header-section-number">7.1</span> Data Science in General</h2>
-<div id="version-control-with-git" class="section level4 unnumbered">
-<h4>Version Control with <a href="https://github.com/">Git</a></h4>
+<div id="version-control-with-git" class="section level3">
+<h3><span class="header-section-number">7.1.1</span> Version Control with <a href="https://github.com/">Git</a></h3>
 <p>If you’re serious about data science, you will need Git. Better learn it early and start enjoying and appreciating it before it’s too late and you’re pressured into learning it on the fly! Every project you do should be versioned with Git. Regardless if you’re working alone or with a big group of developers. Regardless if you write ten lines of code or a really complex program. With Git, you can keep track of all your changes. It’s like a Dropbox/Google Drive for developers, but way better. Pro-Tip: Get free GitHub Pro as a Student with the <a href="https://education.github.com/pack">GitHub Student Developer Pack</a>. Besides all the perks of GitHub Pro, you’ll also free access to many other great tools. See the respective tutorials on how to set up your Git workflow.</p>
 </div>
-<div id="advice-for-non-traditional-data-scientists" class="section level4 unnumbered">
-<h4>Advice for <a href="https://blog.shotwell.ca/posts/learning_data_science/">Non-Traditional Data Scientists</a></h4>
+<div id="advice-for-non-traditional-data-scientists" class="section level3">
+<h3><span class="header-section-number">7.1.2</span> Advice for <a href="https://blog.shotwell.ca/posts/learning_data_science/">Non-Traditional Data Scientists</a></h3>
 <p>Important advice from Gordon Shotwell, a former lawyer, on what it takes to have a successful data science career coming from a non-computer science background. Extremely encouraging and helpful read on what you should and shouldn’t do to reach that goal.</p>
 </div>
-<div id="learn-from-great-data-scientists-on-kaggle" class="section level4 unnumbered">
-<h4>Learn from Great Data Scientists on <a href="https://www.kaggle.com/">Kaggle</a></h4>
+<div id="learn-from-great-data-scientists-on-kaggle" class="section level3">
+<h3><span class="header-section-number">7.1.3</span> Learn from Great Data Scientists on <a href="https://www.kaggle.com/">Kaggle</a></h3>
 <p>Kaggle is a platform that hosts data science challenges. The great thing about it is that you can browse through many clever solutions to tricky machine learning tasks. And of course, you can also join the competition and measure your predictions with others. There are plenty of both Python and R notebooks.</p>
 </div>
 </div>
